--- a/function/delete_function.ipynb
+++ b/function/delete_function.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        "3080"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -90,7 +90,7 @@
        "1546"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -1695,7 +1695,7 @@
        "[32756 rows x 14 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1713,7 +1713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1722,16 +1722,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
     "def del_over1000(df, over1000_df):\n",
     "    # 팔로워 1000명 이상 id 제외\n",
     "    for over1000_id in list(over1000_df['data']):\n",
-    "        idx = df[df['insta_id']==over1000_id].index\n",
+    "        idx = df[df['inner_id']==str(over1000_id)].index\n",
     "        df.drop(idx, inplace=True)\n",
-    "    \n",
+    "        \n",
+    "    id_lst = list(set(df['insta_id']))\n",
+    "    print(len(id_lst))\n",
+    "        \n",
     "    # 좋아요 1000개 이상 게시물 있는 id 제외\n",
     "    df['like_count'] = df['like_count'].apply(int)\n",
     "    id_lst = list(set(df['insta_id']))\n",
@@ -1740,34 +1743,44 @@
     "        for y in list(df[df['insta_id']==user_id]['like_count']):\n",
     "            if y > 1000:\n",
     "                count += 1\n",
-    "        if count > 1:\n",
+    "        if count >= 1:\n",
     "            idx = df[df['insta_id']==user_id].index\n",
     "            df.drop(idx, inplace=True)\n",
-    "            \n",
+    "    id_lst = list(set(df['insta_id']))\n",
+    "    print(len(id_lst))\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 84,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1542\n",
+      "1345\n"
+     ]
+    }
+   ],
    "source": [
     "new_new_df = del_over1000(new_df, over1000_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1363"
+       "1345"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1775,6 +1788,15 @@
    "source": [
     "id_lst = list(set(new_new_df['insta_id']))\n",
     "len(id_lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_new_df.to_csv('jl_delete.csv', index=False)"
    ]
   }
  ],
