reply_crawler 경로 __init__안으로 넣기, delete_over_1000함수 타입 맞추는거 수정

--- a/function/delete_over_1000.ipynb
+++ b/function/delete_over_1000.ipynb
@@ -54,6 +54,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('아이디 개수: {}'.format(len(list(set(df['inner_id'])))))\n",
+    "print('팔로워 1000넘는 아이디 개수: {}'.format(len(id_list)))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 74,
    "metadata": {
     "tags": []
@@ -62,11 +72,20 @@
    "source": [
     "idx = []\n",
     "for i, inner_id in enumerate(df['inner_id']):\n",
-    "    if inner_id in id_list:\n",
+    "    if str(inner_id) in id_list:\n",
     "        idx.append(i)\n",
     "\n",
     "df.drop(idx, inplace=True)\n",
     "df.reset_index(inplace=True, drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('아이디 개수: {}'.format(len(list(set(df['inner_id'])))))"
    ]
   },
   {
