광고 단어 제거 수정

--- a/function/limit_words.ipynb
+++ b/function/limit_words.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,43 +42,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
+   "execution_count": 120,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "28337"
-     },
-     "metadata": {},
-     "execution_count": 53
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "포스트 개수: 28337 , 유저 명수: 1325\n"
     }
    ],
    "source": [
-    "len(df['content'])"
+    "print('포스트 개수: {} , 유저 명수: {}'.format(len(df['content']),len(list(set(df['inner_id'])))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "1325"
-     },
-     "metadata": {},
-     "execution_count": 54
-    }
-   ],
-   "source": [
-    "len(list(set(df['inner_id'])))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 123,
    "metadata": {
     "tags": []
    },
@@ -95,7 +76,7 @@
    "source": [
     "idx = []\n",
     "id_list = []\n",
-    "word_cnt = 1 # 광고 단어 포함 횟수\n",
+    "word_cnt = 2 # 광고 단어 포함 횟수\n",
     "\n",
     "for i, content in enumerate(df['content']):\n",
     "    cnt = 0\n",
@@ -110,38 +91,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
+   "execution_count": 124,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "213"
-     },
-     "metadata": {},
-     "execution_count": 60
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "제거된 포스트 개수: 542, 제거된 유저 명수: 117\n"
     }
    ],
    "source": [
-    "len(idx)"
+    "print('제거된 포스트 개수: {}, 제거된 유저 명수: {}'.format(len(idx), len(list(set(id_list)))))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 125,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "53"
-     },
-     "metadata": {},
-     "execution_count": 61
-    }
-   ],
+   "outputs": [],
    "source": [
-    "len(list(set(id_list)))"
+    "df.drop(idx, inplace=True)\n",
+    "df.reset_index(inplace=True, drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.to_csv('.csv')"
    ]
   }
  ]
