--- a/function/limit_words.ipynb
+++ b/function/limit_words.ipynb
@@ -23,7 +23,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 160,
    "metadata": {
     "tags": []
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 162,
    "metadata": {
     "tags": []
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 163,
    "metadata": {
     "tags": []
    },
@@ -108,17 +108,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(idx, inplace=True)\n",
+    "for user_id in id_list:\n",
+    "    df = df[df['inner_id']!=user_id]\n",
     "df.reset_index(inplace=True, drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 165,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "남은 유저 명수: 1208\n"
+    }
+   ],
+   "source": [
+    "print('남은 유저 명수: {}'.format(len(list(set(df['inner_id'])))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
