--- a/function/ID_region.ipynb
+++ b/function/ID_region.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
     }
    ],
    "source": [
-    "# idx_content와 idx_hashtag에 중복으로 있는 index 제거 후 new_df로 저장\n",
+    "# content와 hashtag에 words가 중복으로 있는 index 제거 후 new_df로 저장\n",
     "idx = []\n",
     "idx.extend(idx_content)\n",
     "idx.extend(idx_hashtag)\n",
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -144,47 +144,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 각 id의 region_tag추출. nan값은 제거."
+    "# 모든 content가 nan값인 user 제거"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_list = np.unique(new_df['insta_id'])"
+    "unique_id = np.unique(new_df['insta_id'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "region = []\n",
-    "\n",
-    "for i in id_list:\n",
-    "    region_tag = []\n",
-    "    for j in new_df[new_df['insta_id']==i]['region_tag']:\n",
+    "content_id_delete = []\n",
+    "for i in unique_id:\n",
+    "    length = len(new_df[new_df['insta_id']==i])\n",
+    "    cnt = 0\n",
+    "    for j in new_df[new_df['insta_id']==i]['content']:\n",
     "        try:\n",
     "            np.isnan(j)\n",
+    "            cnt += 1\n",
     "        except:\n",
-    "            region_tag.append(j)\n",
-    "    region.append(region_tag)"
+    "            pass\n",
+    "    if cnt == length:\n",
+    "        content_id_delete.append(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_region = dict(zip(id_list, region))"
+    "new_new_df = new_df\n",
+    "for i in content_id_delete:\n",
+    "    new_new_df = new_new_df[new_new_df['insta_id']!=i]\n",
+    "new_new_df.reset_index(drop=True, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "모든 content가 nan값인 유저 수: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('모든 content가 nan값인 유저 수: {}'.format(len(content_id_delete)))"
    ]
   },
   {
@@ -196,11 +218,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 모든 content가 nan값인 id 제거\n",
+    "# 각 id의 region_tag추출. nan값은 제거."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 111,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_list = np.unique(new_new_df['insta_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "region = []\n",
+    "\n",
+    "for i in id_list:\n",
+    "    region_tag = []\n",
+    "    for j in new_new_df[new_new_df['insta_id']==i]['region_tag']:\n",
+    "        try:\n",
+    "            np.isnan(j)\n",
+    "        except:\n",
+    "            region_tag.append(j)\n",
+    "    region.append(region_tag)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "id_region = dict(zip(id_list, region))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "id_delete = []\n",
     "\n",
     "for i in id_region:\n",
@@ -210,24 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "모든 content가 nan값인 id 수: 7\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('모든 content가 nan값인 id 수: {}'.format(len(id_delete)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
