더 이상 라벨링할 데이터가 없을 경우에 종료 메시지 추가

--- a/function/label_function.ipynb
+++ b/function/label_function.ipynb
@@ -36,20 +36,23 @@
    "source": [
     "def label(df, start_idx=0):\n",
     "    for x in range(start_idx, len(df)):\n",
-    "        print('현재 레이블링: ', df.loc[x][0])\n",
+    "        print('현재 지역 라벨: ', df.loc[x][0])\n",
     "        print([location for location in df.loc[x] if type(location)!=float][1:])\n",
     "        region_label = input('사용자의 지역을 숫자로 입력해 주세요(종료를 원하시면 0을 입력해 주세요)\\n수도권(1), 강원(2), 충청(3), 전라(4), 경상(5), 모름(6) ')\n",
     "        if region_label == '0':\n",
     "            print('종료 인덱스: ', x)\n",
     "            break\n",
     "        df['region'][x] = region_label\n",
-    "        clear_output()"
+    "        clear_output()\n",
+    "    print('더 이상 라벨링할 데이터가 없습니다!')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -64,6 +67,7 @@
     }
    ],
    "source": [
+    "# (데이터프레임, 라벨링 시작하고 싶은 인덱스)를 함수에 넣어서 실행\n",
     "label(df, 162)"
    ]
   },
