예시 : 충청 데이터 활용

--- a/clustering/clustering_시각화.ipynb
+++ b/clustering/clustering_시각화.ipynb
@@ -120,7 +120,7 @@
         "outputId": "0fd0afd6-8e18-427b-b4a8-68db71a33d95"
       },
       "source": [
-        "graphistry.register(api=3, protocol=\"https\", server=\"hub.graphistry.com\", username=\"Szing2\", password=\"#nayana310\")\n",
+        "graphistry.register(api=3, protocol=\"https\", server=\"hub.graphistry.com\", username=\"아이디 입력하기\", password=\"비밀번호 입력하기\")\n",
         "graphistry.edges(pd.read_csv(r'C:\\Users\\sojeo\\cc.txt', delimiter=' ')).bind(source='start', destination='end').plot()"
       ],
       "execution_count": null,
