id_to_dict함수 오류수정

--- a/clustering/클러스터링을 위한 전처리.ipynb
+++ b/clustering/클러스터링을 위한 전처리.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,115 +30,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>start</th>\n",
-       "      <th>end</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>6947073237</td>\n",
-       "      <td>13624490327</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>13624490327</td>\n",
-       "      <td>7964987666</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4516509236</td>\n",
-       "      <td>5681987893</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2170592442</td>\n",
-       "      <td>5681987893</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>25228228259</td>\n",
-       "      <td>5681987893</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12904</th>\n",
-       "      <td>1465325432</td>\n",
-       "      <td>1469939130</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12905</th>\n",
-       "      <td>1465325432</td>\n",
-       "      <td>1553528493</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12906</th>\n",
-       "      <td>1465325432</td>\n",
-       "      <td>1595354931</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12907</th>\n",
-       "      <td>1465325432</td>\n",
-       "      <td>3657930948</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12908</th>\n",
-       "      <td>1465325432</td>\n",
-       "      <td>3066632485</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>12909 rows × 2 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "             start          end\n",
-       "0       6947073237  13624490327\n",
-       "1      13624490327   7964987666\n",
-       "2       4516509236   5681987893\n",
-       "3       2170592442   5681987893\n",
-       "4      25228228259   5681987893\n",
-       "...            ...          ...\n",
-       "12904   1465325432   1469939130\n",
-       "12905   1465325432   1553528493\n",
-       "12906   1465325432   1595354931\n",
-       "12907   1465325432   3657930948\n",
-       "12908   1465325432   3066632485\n",
-       "\n",
-       "[12909 rows x 2 columns]"
-      ]
+      "text/plain": "             start          end\n0       6947073237  13624490327\n1      13624490327   7964987666\n2       4516509236   5681987893\n3       2170592442   5681987893\n4      25228228259   5681987893\n...            ...          ...\n12904   1465325432   1469939130\n12905   1465325432   1553528493\n12906   1465325432   1595354931\n12907   1465325432   3657930948\n12908   1465325432   3066632485\n\n[12909 rows x 2 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>start</th>\n      <th>end</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>6947073237</td>\n      <td>13624490327</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>13624490327</td>\n      <td>7964987666</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4516509236</td>\n      <td>5681987893</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2170592442</td>\n      <td>5681987893</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>25228228259</td>\n      <td>5681987893</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>12904</th>\n      <td>1465325432</td>\n      <td>1469939130</td>\n    </tr>\n    <tr>\n      <th>12905</th>\n      <td>1465325432</td>\n      <td>1553528493</td>\n    </tr>\n    <tr>\n      <th>12906</th>\n      <td>1465325432</td>\n      <td>1595354931</td>\n    </tr>\n    <tr>\n      <th>12907</th>\n      <td>1465325432</td>\n      <td>3657930948</td>\n    </tr>\n    <tr>\n      <th>12908</th>\n      <td>1465325432</td>\n      <td>3066632485</td>\n    </tr>\n  </tbody>\n</table>\n<p>12909 rows × 2 columns</p>\n</div>"
      },
-     "execution_count": 101,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
    "source": [
@@ -147,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,18 +59,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "4741"
-      ]
+      "text/plain": "4741"
      },
-     "execution_count": 103,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
    "source": [
@@ -178,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,18 +88,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "5642"
-      ]
+      "text/plain": "5642"
      },
-     "execution_count": 105,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 7
     }
    ],
    "source": [
@@ -209,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,18 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "7707"
-      ]
+      "text/plain": "7707"
      },
-     "execution_count": 107,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 9
     }
    ],
    "source": [
@@ -247,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,34 +164,34 @@
     "        id2idx_dic[ide]\n",
     "\n",
     "    for i, v in enumerate(id_ls):\n",
-    "        index = id2idx_dic[v]"
+    "        index = id2idx_dic[v]\n",
+    "\n",
+    "    return id2idx_dic"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "id_to_dict(id_ls)"
+    "id2idx_dic = id_to_dict(id_ls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "7707"
-      ]
+      "text/plain": "7707"
      },
-     "execution_count": 112,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 15
     }
    ],
    "source": [
@@ -586,18 +482,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "142"
-      ]
+      "text/plain": "142"
      },
-     "execution_count": 84,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 17
     }
    ],
    "source": [
@@ -617,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -631,163 +525,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trans_id = transform_id(Community_11, id2idx_dic)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
-      "text/plain": [
-       "[2107411892,\n",
-       " 494549561,\n",
-       " 3544466817,\n",
-       " 2427499074,\n",
-       " 8143941921,\n",
-       " 2920560812,\n",
-       " 29471359997,\n",
-       " 3797542433,\n",
-       " 532606451,\n",
-       " 1773729536,\n",
-       " 2067777795,\n",
-       " 3030430463,\n",
-       " 4803416099,\n",
-       " 37929419203,\n",
-       " 37952417331,\n",
-       " 10705124203,\n",
-       " 1552091689,\n",
-       " 36325953798,\n",
-       " 33513192535,\n",
-       " 25472301160,\n",
-       " 1958859433,\n",
-       " 24805113155,\n",
-       " 19111152891,\n",
-       " 1773493550,\n",
-       " 13265448452,\n",
-       " 1443263155,\n",
-       " 7120750999,\n",
-       " 2298701655,\n",
-       " 8791125347,\n",
-       " 3071585233,\n",
-       " 8429067064,\n",
-       " 5747895992,\n",
-       " 8205955183,\n",
-       " 7023452561,\n",
-       " 1956471396,\n",
-       " 7389269895,\n",
-       " 2305676287,\n",
-       " 1751495837,\n",
-       " 1571118949,\n",
-       " 2252442444,\n",
-       " 2945790184,\n",
-       " 4619390001,\n",
-       " 4188291969,\n",
-       " 3951410066,\n",
-       " 1595218661,\n",
-       " 3261853870,\n",
-       " 3239043960,\n",
-       " 2023927618,\n",
-       " 2930442996,\n",
-       " 3111939252,\n",
-       " 1507979106,\n",
-       " 7134502094,\n",
-       " 8272341489,\n",
-       " 31446261160,\n",
-       " 2130531223,\n",
-       " 1723077843,\n",
-       " 1785148860,\n",
-       " 22081457271,\n",
-       " 7791578310,\n",
-       " 904407922,\n",
-       " 2065956624,\n",
-       " 4459284299,\n",
-       " 8493323021,\n",
-       " 2127258743,\n",
-       " 745012853,\n",
-       " 1450229153,\n",
-       " 16940403748,\n",
-       " 8931052947,\n",
-       " 2032465180,\n",
-       " 1522771941,\n",
-       " 1416240305,\n",
-       " 2865869343,\n",
-       " 1635461735,\n",
-       " 4550136434,\n",
-       " 2307331080,\n",
-       " 2720409774,\n",
-       " 11442854912,\n",
-       " 2298081896,\n",
-       " 2103418442,\n",
-       " 4329641240,\n",
-       " 2204336350,\n",
-       " 9139813492,\n",
-       " 6833999069,\n",
-       " 6119440984,\n",
-       " 3972047606,\n",
-       " 14891710183,\n",
-       " 8533508598,\n",
-       " 1951535536,\n",
-       " 1529515624,\n",
-       " 7753180915,\n",
-       " 1520758718,\n",
-       " 1544451136,\n",
-       " 2475299087,\n",
-       " 1442239306,\n",
-       " 5798583245,\n",
-       " 2930239032,\n",
-       " 1587512065,\n",
-       " 1444784492,\n",
-       " 745039200,\n",
-       " 3240818176,\n",
-       " 5676616709,\n",
-       " 1210259945,\n",
-       " 8186754865,\n",
-       " 8166556509,\n",
-       " 5863186705,\n",
-       " 7463763449,\n",
-       " 6312169697,\n",
-       " 1999497300,\n",
-       " 523620453,\n",
-       " 5746701289,\n",
-       " 1313067660,\n",
-       " 1072315070,\n",
-       " 504890596,\n",
-       " 4489774715,\n",
-       " 1777081113,\n",
-       " 3306694736,\n",
-       " 1492118997,\n",
-       " 5725064861,\n",
-       " 2246319280,\n",
-       " 2065350619,\n",
-       " 1588655944,\n",
-       " 1162450948,\n",
-       " 2932733903,\n",
-       " 2521579314,\n",
-       " 1501612707,\n",
-       " 1165013510,\n",
-       " 3721024700,\n",
-       " 537501571,\n",
-       " 1828777,\n",
-       " 545774776,\n",
-       " 1500342,\n",
-       " 451014727,\n",
-       " 2122837846,\n",
-       " 2313725992,\n",
-       " 1450533285,\n",
-       " 2327193626,\n",
-       " 1638103600,\n",
-       " 2200675275,\n",
-       " 1289907731,\n",
-       " 615329659,\n",
-       " 2213750563,\n",
-       " 1202004193]"
-      ]
+      "text/plain": "142"
      },
-     "execution_count": 98,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 20
     }
    ],
    "source": [
-    "transform_id(Community_11, id2idx_dic)"
+    "len(trans_id)"
    ]
   }
  ],
@@ -807,7 +567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.6-final"
   }
  },
  "nbformat": 4,
